--- a/index.html
+++ b/index.html
@@ -2051,5 +2051,172 @@ let cmp = lanceCompare(topOur, topRiv, opts);
   });
 })();
 </script>
+<script>
+// === UI: ¿Hubo descartes? y wiring rápido ===
+(function(){
+  // Crea selector "¿Hubo descartes?"
+  const dComp = document.getElementById('mc-dcomp');
+  if(!dComp) return;
+  const block = dComp.closest('div.row')?.parentElement; // bloque "Descartes de cada jugador"
+  if(!block) return;
+
+  const wrap = document.createElement('div');
+  wrap.className = 'row';
+  wrap.style.marginTop = '8px';
+  wrap.innerHTML = `
+    <div>
+      <label>¿Hubo descartes?</label>
+      <div class="row">
+        <span class="badge">Respuesta:
+          <select class="mono" id="mc-hubo" style="margin-left:6px">
+            <option value="no">No</option>
+            <option value="si">Sí</option>
+          </select>
+        </span>
+      </div>
+      <div class="tip muted sm" style="margin-top:6px">Si eliges "No", todos los descartes se ponen a 0 y se oculta el bloque.</div>
+    </div>`;
+  block.parentElement.insertBefore(wrap, block);
+
+  function setDiscardUI(on){
+    const ids = ['mc-dcomp','mc-dop1','mc-dop2'];
+    ids.forEach(id=>{
+      const el = document.getElementById(id);
+      if(!el) return;
+      el.disabled = !on;
+      if(!on){ el.value = '0'; }
+    });
+    block.style.display = on ? '' : 'none';
+  }
+  document.getElementById('mc-hubo').addEventListener('change', e=>{
+    setDiscardUI(e.target.value === 'si');
+  });
+  // Estado inicial: oculto y a 0
+  setDiscardUI(false);
+})();
+</script>
+
+<script>
+// === Simulador: sesgo realista de "lo que no tiran son reyes" ===
+(function(){
+  // Utilidades base
+  function deck40(){
+    const ranks = ["R","3","C","S","7","6","5","4","A","2"];
+    const d=[]; for(const r of ranks){ for(let i=0;i<4;i++) d.push(r); } return d;
+  }
+  function removeOnce(arr, val){ const i = arr.indexOf(val); if(i>=0) arr.splice(i,1); }
+  function drawRandom(arr, n){
+    const out=[]; for(let i=0;i<n && arr.length;i++){ out.push(arr.splice(Math.floor(Math.random()*arr.length),1)[0]); }
+    return out;
+  }
+
+  // Preferencias ya presentes en tu código
+  const ORDER_GRANDE = (typeof window.ORDER_GRANDE !== "undefined") ? window.ORDER_GRANDE : ["R","3","C","S","7","6","5","4","A","2"];
+
+  // Prob. de que una carta conservada sea "rey" (R o 3). Ajustable.
+  const P_KEEP_IS_KING = 0.65;
+
+  function kingsWanted(kept, p){
+    if(kept<=0) return 0;
+    // Al menos 1 rey si hay descarte. Luego Bernoulli por cada carta conservada.
+    let w = 1;
+    for(let i=1;i<kept;i++){ if(Math.random()<p) w++; }
+    return Math.min(kept, w);
+  }
+
+  function takeKingFromDeck(deck){
+    let ix = deck.indexOf("R");
+    if(ix<0) ix = deck.indexOf("3");
+    if(ix<0) return null;
+    return deck.splice(ix,1)[0];
+  }
+
+  function draw4WithBiasedKings(deck, keptCount, pKing){
+    // Construye mano inicial de 4 con 'want' reyes preferentes si hay descartes.
+    const want = kingsWanted(keptCount, pKing);
+    const hand = [];
+    for(let i=0;i<want;i++){
+      const k = takeKingFromDeck(deck);
+      if(k) hand.push(k);
+    }
+    // Rellena hasta 4 al azar
+    while(hand.length<4 && deck.length) hand.push(deck.splice(Math.floor(Math.random()*deck.length),1)[0]);
+    // Baraja la mano para no dar información de posiciones
+    for(let i=hand.length-1;i>0;i--){ const j=Math.floor(Math.random()*(i+1)); [hand[i],hand[j]]=[hand[j],hand[i]]; }
+    return hand;
+  }
+
+  // Reemplaza teamWins para usar el nuevo sesgo sin tocar tu API pública
+  const applyDD = window.applyDiscardsAndDraw || function(h,d,n){ if(!n) return h; return h.concat(drawRandom(d,n)).slice(0,4); };
+  const compGrande = window.compGrande, compChica = window.compChica, compPares = window.compPares;
+  const compJuego  = (a,b,o)=>window.compJuego ? window.compJuego(a,b,o) : 0;
+
+  window.teamWins = function(lanceCompare, myHand, opts){
+    const iters = opts.iters||20000;
+    const mano  = !!opts.mano;
+
+    // UI: ¿hubo descartes?
+    const hubo = (document.getElementById('mc-hubo')?.value || 'no') === 'si';
+
+    // Lectura de campos existentes
+    const discardsMine = (opts.discardsMine||[]).slice(0,4).filter(Boolean);
+    let dComp = parseInt(document.getElementById("mc-dcomp")?.value||"0",10);
+    let dOp1  = parseInt(document.getElementById("mc-dop1") ?.value||"0",10);
+    let dOp2  = parseInt(document.getElementById("mc-dop2") ?.value||"0",10);
+    if(!hubo){ dComp=dOp1=dOp2=0; }
+
+    const strategyComp = opts.discardStrategy || "pdf";
+    const strategyRiv  = 'pdf';
+
+    let wins=0, ties=0;
+    for(let t=0;t<iters;t++){
+      const deck = deck40();
+      // Quita mis cartas y mis descartes "quemadas"
+      myHand.forEach(c=>removeOnce(deck,c));
+      discardsMine.forEach(c=>removeOnce(deck,c));
+
+      // Reparte según sesgo: si hubo descartes, prefija reyes en las cartas que presumiblemente conservan
+      const keptComp = Math.max(0, 4 - dComp);
+      const keptOp1  = Math.max(0, 4 - dOp1);
+      const keptOp2  = Math.max(0, 4 - dOp2);
+
+      let comp = hubo ? draw4WithBiasedKings(deck, keptComp, P_KEEP_IS_KING) : drawRandom(deck,4);
+      let op1  = hubo ? draw4WithBiasedKings(deck, keptOp1 , P_KEEP_IS_KING) : drawRandom(deck,4);
+      let op2  = hubo ? draw4WithBiasedKings(deck, keptOp2 , P_KEEP_IS_KING) : drawRandom(deck,4);
+
+      // Aplicar descartes y robar
+      comp = applyDD(comp, deck, dComp, strategyComp,   lanceTag(lanceCompare), {mano:false});
+      op1  = applyDD(op1 , deck, dOp1 , strategyRiv ,   lanceTag(lanceCompare), {mano:false});
+      op2  = applyDD(op2 , deck, dOp2 , strategyRiv ,   lanceTag(lanceCompare), {mano:false});
+
+      // Elegir mejor de cada pareja
+      const c12 = lanceCompare(comp, myHand, opts);
+      const topOur = (c12>=0) ? comp : myHand;
+      const r12 = lanceCompare(op1, op2, opts);
+      const topRiv = (r12>=0) ? op1 : op2;
+
+      let cmp = lanceCompare(topOur, topRiv, opts);
+      if(cmp===0) cmp = mano ? 1 : -1;
+      if(cmp>0) wins++; else if(cmp===0) ties++;
+    }
+    return wins/iters;
+  };
+
+  function lanceTag(lc){
+    if(lc===window.compGrande) return 'grande';
+    if(lc===window.compChica ) return 'chica';
+    if(lc===window.compPares ) return 'pares';
+    return 'juego';
+  }
+
+  // Hook: re-ejecutar al cambiar "¿Hubo descartes?"
+  document.getElementById('mc-hubo')?.addEventListener('change', ()=>{
+    const ids=['mc-c1','mc-c2','mc-c3','mc-c4'];
+    if(ids.every(id=>document.getElementById(id)?.value)){
+      document.getElementById('mc-run')?.click();
+    }
+  });
+})();
+</script>
 </body>
 </html>
